[gd_scene load_steps=4 format=3 uid="uid://dh5so7qjmi0x4"]

[ext_resource type="Script" path="res://CyberUpgrades/CyberControlsBox.gd" id="1_qrtpm"]
[ext_resource type="PackedScene" uid="uid://64t6gbok7suj" path="res://CyberUpgrades/control_category.tscn" id="2_esgeg"]
[ext_resource type="PackedScene" uid="uid://srkcryceogmp" path="res://CyberUpgrades/location_preview.tscn" id="3_xeb2b"]

[node name="CyberControlsBox" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qrtpm")
control_box = ExtResource("2_esgeg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0

[node name="LocationPreview" parent="VBoxContainer" instance=ExtResource("3_xeb2b")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 210)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MasterContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
mouse_filter = 0
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/MasterContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TopLevel" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MasterContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="CyberControlsLabel" type="Label" parent="VBoxContainer/PanelContainer/MasterContainer/MarginContainer/TopLevel"]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 0
theme_override_font_sizes/font_size = 20
text = " Cyber Controls"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="resized" from="VBoxContainer/PanelContainer/MasterContainer" to="." method="_on_master_container_resized"]
